# bootcamp-ayaaz

./: README.md
Iterators-And-Streams/: notes.html  notes.md
Iterators-And-Streams/Drills/: ex-1.py  ex-5.py  ex-7.py
Iterators-And-Streams/Transform/: pyproject.toml  stream_functions.py
Persistence/: notes.html  notes.md
Persistence/SQLite/: notes.html
Python-basics/: notes.html  notes.md
Python-basics/Classes-And-Objects/: ex-14.py  ex-19.py
Python-basics/Data-Structures/: ex-14.py
Python-basics/Decorators&Lamda-Functions/: ex-7.py
Python-basics/More/: ex-3.py
api/: ex-1-10.py  ex-1-6.py  ex-11.py  ex-14.py  ex-2-2.py  ex-9.py  ex_4_4.py  ex_4_6.py  notes.html  notes.md
api/ex-2-1/templates/: items.html
persistent_queue_project/: README.md  notes.html  notes.md
persistent_queue_project/persistent_queue/: consumer.py  manager.py  ops.py  producer.py  queue_interface.py  queue_sqlite.py
persistent_queue_project/supervisor/: supervisord.conf
persistent_queue_project/tests/: tests_queue.py
python_basics/Classes-And-Objects/: ex-12.py  ex-17.py  ex-6.py
python_basics/Data-Structures/: ex-21.py  ex-9.py
python_basics/Decorators&Lamda-Functions/: ex-15.py  ex-2.py  ex-3.py  ex-4.py  ex-5.py  ex-6.py  ex-8.py  ex-9.py
python_basics/Iterators-And-Streams/Drills/: ex-10.py  ex-3.py  ex-4.py  (+1 more)
python_basics/More/: ex-4.py  ex-6.py
python_basics/api/: ex-1.py  ex-12.py  ex-13.py  ex-2.py  ex-3.py  ex-4.py  ex-5.py  ex-7.py  ex-8.py  ex_3_2.py  ex_3_3.py  ex_3_4.py  ex_3_5.py  ex_3_6.py  ex_4_1.py  ex_4_3.py  ex_4_5.py  ex_4_7.py  ex_4_8.py
(+9 files in other folders)
